<resources>
    <string name="app_name" translatable="false">SPEED CALCULATOR</string>
    <string name="distance">Enter distance (meter)</string>
    <string name="time">Enter time (second)</string>
    <string name="clear">CLEAR</string>
    <string name="calculate">CALCULATE</string>
    <string name="speed">Average Speed (kh/m)</string>
    <string name="over">Speed is over limit!</string>
    <string name="reqiure">Distance and time are required</string>
    <string name="zero">Time must be greater than zero</string>

</resources>