<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/time"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="#BAB3B3"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="numberDecimal"
        android:shadowColor="#FFFFFF"
        android:textColorHint="#857C7C"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SPEEDCALCULATOR"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1000:625"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/speed_meter" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="76dp"
        android:layout_height="90dp"
        android:layout_marginBottom="244dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/red_cow" />

    <EditText
        android:id="@+id/distance"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:layout_marginTop="30dp"
        android:background="#BAB3B3"
        android:ems="10"
        android:hint="@string/distance"
        android:inputType="numberDecimal"
        android:shadowColor="#FFFFFF"
        android:textColor="#090909"
        android:textColorHint="#857C7C"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.22000003" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:background="#BAB3B3"
        android:text="@string/clear"
        app:layout_constraintEnd_toStartOf="@+id/calculate"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <Button
        android:id="@+id/calculate"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="#BAB3B3"
        android:text="@string/calculate"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/ans"
        android:layout_width="250dp"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:autoSizeTextType="uniform"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.186" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:autoSizeTextType="uniform"
        android:text="@string/speed"
        android:textColor="#FB0101"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clear"
        app:layout_constraintVertical_bias="0.233" />

</androidx.constraintlayout.widget.ConstraintLayout>